// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload 1 selected file renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r9:"
    >
      <span
        class="css-1jywj6f-boxStyles"
      >
        Upload file
      </span>
      <span
        class="css-axuon-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-1jndov8-boxStyles"
      id="field-:r9:-hint"
    >
      General hint information
    </span>
    <div
      class="css-1mxr31d-boxStyles"
    >
      <div
        class="css-5ur8x"
        role="status"
      />
      <div
        class="css-79i25n-boxStyles"
      >
        <div
          class="css-1qmc73y-boxStyles"
        >
          <svg
            aria-hidden="true"
            class="css-1iylkid-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3M8 7l4-4M16 7l-4-4M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16"
            />
          </svg>
          <input
            aria-hidden="true"
            class="css-5ur8x"
            tabindex="-1"
            type="file"
          />
          <div
            class="css-iij6ui-boxStyles"
          >
            <span
              class="css-1ay4t5v-FileUpload"
            >
              <span
                class="css-vffudx-boxStyles-FileUpload"
              >
                Drag and drop a file or select a file to upload.
              </span>
              <span
                class="css-110dnkz-boxStyles-FileUpload"
              >
                Drop 
                file
                 here…
              </span>
            </span>
          </div>
          <button
            aria-describedby="field-:r9:-hint"
            aria-label="Select file, Upload file, (optional), 1 file selected"
            class="css-1qjel8e-BaseButton-Button"
            id="field-:r9:"
            type="button"
          >
            <span>
              <span
                class="css-oobk4c-Button"
              >
                Select file
              </span>
              <span
                aria-live="assertive"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-1wcx0lf-boxStyles"
      >
        <span
          class="css-axuon-boxStyles"
        >
          1 file selected
        </span>
        <ul
          aria-label="Selected files"
          class="css-1wcx0lf-boxStyles"
        >
          <li
            class="css-1ydwyx-boxStyles"
          >
            <div
              class="css-1jhrbpg-boxStyles"
            >
              <div
                class="css-iineh1-boxStyles-FileUploadFileThumbnail"
              >
                <svg
                  aria-hidden="true"
                  class="css-16t9tz1-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"
                  />
                  <path
                    d="M13 2v7h7"
                  />
                </svg>
              </div>
              <div
                class="css-w79ye0-boxStyles"
              >
                <span
                  class="css-ayz5ov-boxStyles"
                >
                  example.txt
                  <span
                    class="css-1ehfodt-boxStyles-FileUploadFile"
                  >
                     
                    (
                    100 B
                    )
                  </span>
                </span>
              </div>
            </div>
            <div
              class="css-jd5yi9-boxStyles"
            >
              <button
                aria-label="Remove file: example.txt"
                class="css-psfrx5-BaseButton-Button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-wfexcw-Button"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18M6 6l12 12"
                  />
                </svg>
                <span>
                  <span
                    class="css-oobk4c-Button"
                  >
                    Remove
                  </span>
                  <span
                    aria-live="assertive"
                  />
                </span>
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload Basic renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r1:"
    >
      <span
        class="css-1jywj6f-boxStyles"
      >
        Upload file
      </span>
      <span
        class="css-axuon-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-1jndov8-boxStyles"
      id="field-:r1:-hint"
    >
      General hint information
    </span>
    <div
      class="css-1mxr31d-boxStyles"
    >
      <div
        class="css-5ur8x"
        role="status"
      />
      <div
        class="css-79i25n-boxStyles"
      >
        <div
          class="css-1qmc73y-boxStyles"
        >
          <svg
            aria-hidden="true"
            class="css-1iylkid-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3M8 7l4-4M16 7l-4-4M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16"
            />
          </svg>
          <input
            aria-hidden="true"
            class="css-5ur8x"
            tabindex="-1"
            type="file"
          />
          <div
            class="css-iij6ui-boxStyles"
          >
            <span
              class="css-1ay4t5v-FileUpload"
            >
              <span
                class="css-vffudx-boxStyles-FileUpload"
              >
                Drag and drop a file or select a file to upload.
              </span>
              <span
                class="css-110dnkz-boxStyles-FileUpload"
              >
                Drop 
                file
                 here…
              </span>
            </span>
          </div>
          <button
            aria-describedby="field-:r1:-hint"
            aria-label="Select file, Upload file, (optional)"
            class="css-1qjel8e-BaseButton-Button"
            id="field-:r1:"
            type="button"
          >
            <span>
              <span
                class="css-oobk4c-Button"
              >
                Select file
              </span>
              <span
                aria-live="assertive"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload Existing files renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:rd:"
    >
      <span
        class="css-1jywj6f-boxStyles"
      >
        Upload file
      </span>
      <span
        class="css-axuon-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-1jndov8-boxStyles"
      id="field-:rd:-hint"
    >
      General hint information
    </span>
    <div
      class="css-1mxr31d-boxStyles"
    >
      <div
        class="css-5ur8x"
        role="status"
      />
      <div
        class="css-79i25n-boxStyles"
      >
        <div
          class="css-1qmc73y-boxStyles"
        >
          <svg
            aria-hidden="true"
            class="css-1iylkid-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3M8 7l4-4M16 7l-4-4M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16"
            />
          </svg>
          <input
            aria-hidden="true"
            class="css-5ur8x"
            tabindex="-1"
            type="file"
          />
          <div
            class="css-iij6ui-boxStyles"
          >
            <span
              class="css-1ay4t5v-FileUpload"
            >
              <span
                class="css-vffudx-boxStyles-FileUpload"
              >
                Drag and drop a file or select a file to upload.
              </span>
              <span
                class="css-110dnkz-boxStyles-FileUpload"
              >
                Drop 
                file
                 here…
              </span>
            </span>
          </div>
          <button
            aria-describedby="field-:rd:-hint"
            aria-label="Select file, Upload file, (optional), 2 files selected"
            class="css-1qjel8e-BaseButton-Button"
            id="field-:rd:"
            type="button"
          >
            <span>
              <span
                class="css-oobk4c-Button"
              >
                Select file
              </span>
              <span
                aria-live="assertive"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-1wcx0lf-boxStyles"
      >
        <span
          class="css-axuon-boxStyles"
        >
          2 files selected
        </span>
        <ul
          aria-label="Existing files"
          class="css-1wcx0lf-boxStyles"
        >
          <li
            class="css-8coe2o-boxStyles"
          >
            <div
              class="css-1jhrbpg-boxStyles"
            >
              <div
                class="css-v9fqu3-boxStyles-FileUploadFileThumbnail"
              />
              <div
                class="css-w79ye0-boxStyles"
              >
                <div
                  class="css-1ldvxqr-boxStyles"
                >
                  <svg
                    aria-hidden="false"
                    aria-label="Success"
                    class="css-1qd7isr-FileUploadExistingFile"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                      fill="currentColor"
                      stroke="none"
                    />
                  </svg>
                </div>
                <span
                  class="css-ayz5ov-boxStyles"
                >
                  <a
                    class="css-4xsxs2-TextLink-FileUploadExistingFile"
                    href="#"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    example.png
                     (123.46 kB)
                  </a>
                </span>
              </div>
            </div>
            <div
              class="css-jd5yi9-boxStyles"
            >
              <button
                aria-label="Remove file: example.png"
                class="css-psfrx5-BaseButton-Button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-wfexcw-Button"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18M6 6l12 12"
                  />
                </svg>
                <span>
                  <span
                    class="css-oobk4c-Button"
                  >
                    Remove
                  </span>
                  <span
                    aria-live="assertive"
                  />
                </span>
              </button>
            </div>
          </li>
          <li
            class="css-8coe2o-boxStyles"
          >
            <div
              class="css-1jhrbpg-boxStyles"
            >
              <div
                class="css-iineh1-boxStyles-FileUploadFileThumbnail"
              >
                <svg
                  aria-hidden="true"
                  class="css-16t9tz1-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"
                  />
                  <path
                    d="M13 2v7h7"
                  />
                </svg>
              </div>
              <div
                class="css-w79ye0-boxStyles"
              >
                <div
                  class="css-1ldvxqr-boxStyles"
                >
                  <svg
                    aria-hidden="false"
                    aria-label="Success"
                    class="css-1qd7isr-FileUploadExistingFile"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
                      fill="currentColor"
                      stroke="none"
                    />
                  </svg>
                </div>
                <span
                  class="css-ayz5ov-boxStyles"
                >
                  <a
                    class="css-4xsxs2-TextLink-FileUploadExistingFile"
                    href="#"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    example-no-thumbnail.doc
                     (654.32 kB)
                  </a>
                </span>
              </div>
            </div>
            <div
              class="css-jd5yi9-boxStyles"
            >
              <button
                aria-label="Remove file: example-no-thumbnail.doc"
                class="css-psfrx5-BaseButton-Button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-wfexcw-Button"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18M6 6l12 12"
                  />
                </svg>
                <span>
                  <span
                    class="css-oobk4c-Button"
                  >
                    Remove
                  </span>
                  <span
                    aria-live="assertive"
                  />
                </span>
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload Multiple, maxSize and accepted file extensions renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r5:"
    >
      <span
        class="css-1jywj6f-boxStyles"
      >
        Upload file
      </span>
      <span
        class="css-axuon-boxStyles"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-1jndov8-boxStyles"
      id="field-:r5:-hint"
    >
      General hint information
    </span>
    <div
      class="css-1mxr31d-boxStyles"
    >
      <div
        class="css-5ur8x"
        role="status"
      />
      <div
        class="css-79i25n-boxStyles"
      >
        <div
          class="css-1qmc73y-boxStyles"
        >
          <svg
            aria-hidden="true"
            class="css-1iylkid-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 15V3M8 7l4-4M16 7l-4-4M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16"
            />
          </svg>
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png"
            aria-hidden="true"
            class="css-5ur8x"
            multiple=""
            tabindex="-1"
            type="file"
          />
          <div
            class="css-iij6ui-boxStyles"
          >
            <span
              class="css-1ay4t5v-FileUpload"
            >
              <span
                class="css-vffudx-boxStyles-FileUpload"
              >
                Drag and drop files here or select files to upload.
              </span>
              <span
                class="css-110dnkz-boxStyles-FileUpload"
              >
                Drop 
                files
                 here…
              </span>
            </span>
            <span
              class="css-axuon-boxStyles"
              id=":r4:-file-size-desc"
            >
              Each file
               cannot exceed
               
              3 MB
              .
            </span>
            <span
              class="css-axuon-boxStyles"
              id=":r4:-accepted-files-desc"
            >
              Files accepted: 
              jpeg, jpg, png
              .
            </span>
          </div>
          <button
            aria-describedby="field-:r5:-hint :r4:-file-size-desc :r4:-accepted-files-desc"
            aria-label="Select files, Upload file, (optional)"
            class="css-1qjel8e-BaseButton-Button"
            id="field-:r5:"
            type="button"
          >
            <span>
              <span
                class="css-oobk4c-Button"
              >
                Select files
              </span>
              <span
                aria-live="assertive"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
